kustomize/bases/monitoring/grafana/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: grafana
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/version: "10.0.3"
  name: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: grafana
      app.kubernetes.io/component: server
      app.kubernetes.io/instance: monitoring
  template:
    metadata:
      labels:
        app.kubernetes.io/name: grafana
        app.kubernetes.io/component: server
        app.kubernetes.io/part-of: grafana
        app.kubernetes.io/instance: monitoring
        app.kubernetes.io/version: "10.0.3"
    spec:
      containers:
        - name: grafana
          image: grafana/grafana-oss:10.0.3
          # This is only informational and not necessarily needed.
          # https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.27/#container-v1-core
          # ports:
          #   - containerPort: 3000
          #     protocol: TCP
          volumeMounts:
            - mountPath: /etc/grafana/provisioning/datasources
              name: grafana-datasources
            - mountPath: /var/lib/grafana
              name: grafana-storage
          # https://grafana.com/docs/grafana/latest/setup-grafana/installation/kubernetes/
          readinessProbe:
            httpGet:
              path: /robots.txt
              port: 3000
              scheme: HTTP
          livenessProbe:
            tcpSocket:
              port: 3000
          resources:
            requests:
              # 1/4 core and 750MB of memory
              cpu: 250m
              memory: 750Mi

      securityContext:
        fsGroup: 472
        supplementalGroups:
          - 0

      volumes:
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        - name: grafana-storage
          persistentVolumeClaim:
            claimName: grafana
