kustomize/bases/monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/component: server
    app.kubernetes.io/part-of: grafana
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/version: "10.4.0"
spec:
  # Make a headless service.
  clusterIP: None
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: monitoring
